[package]
name = "rust_monkey"
version = "0.1.0"
edition = "2021"
authors = ["Milton"]

[lib]
path = "src/lib/mod.rs"

[[bin]]
path = "src/main.rs"
name = "rust_monkey"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.4.1"
